update deleted comment to track cases where card is deleted, and timezone is now on par with trello's